--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </div>
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide bg1"></div>
-            <div class="swiper-slide bg2"></div>
-            <div class="swiper-slide bg3"></div>
+            <div class="swiper-slide bg1"><a href="sub3.html"></a></div>
+            <div class="swiper-slide bg2"><a href="sub3.html"></a></div>
+            <div class="swiper-slide bg3"><a href="sub3.html"></a></div>
         </div>
         <div class="swiper_position">
             <div class="swiper-button-next"></div>
