--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
     <div id="attachment">
         <p class="slogan">In all ways, and always HARANG</p><br>
-        <p class="slogan2">모든 길들에서 그리고 항상 하랑항공이 함께 하겠습니다</p>
+        <p class="slogan2">모든 길들에서 항상 하랑항공이 함께 하겠습니다</p>
     </div>
     <div id="text">
         <div>
